--- a/src/main/resources/templates/monitor.html
+++ b/src/main/resources/templates/monitor.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head lang="en">
-    <meta charset="UTF-8"/>
-    <title>Badge-O-Rama</title>
+<head>
+    <meta charset="UTF-8">
+    <title>Monitor Home</title>
     <link rel="stylesheet" href="/main.css"/>
 </head>
 <body>
 
-<div id="react"></div>
+<div id="monitor"></div>
 
 <script src="built/bundle.js"></script>
 
