--- a/src/main/resources/static/main.css
+++ b/src/main/resources/static/main.css
@@ -7,3 +7,15 @@ td, th {
     padding: 0.5rem;
     text-align: left;
 }
+
+body,h1,h2,h3,h4,h5,h6 {
+    font-family: "Lato", sans-serif
+}
+
+.w3-bar,h1,button {
+    font-family: "Montserrat", sans-serif
+}
+
+.fa-anchor,.fa-coffee {
+    font-size:200px
+}
