--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,17 +11,17 @@
 <!-- Side Navigation -->
 <nav class="w3-sidebar w3-bar-block w3-card w3-animate-left w3-center" style="display:none" id="mySidebar">
     <h1 class="w3-xxxlarge w3-text-theme">Pick a Role</h1>
-    <button class="w3-bar-item w3-button" onclick="w3_close()">Close <i class="fa fa-remove"></i></button>
     <a href="#" class="w3-bar-item w3-button">Visitor</a>
     <a href="#" class="w3-bar-item w3-button">Monitor</a>
+    <button class="w3-bar-item w3-button" onclick="w3_close()">Close <i class="fa fa-remove"></i></button>
 </nav>
 
 <!-- Header -->
 <header class="w3-container w3-theme w3-padding" id="myHeader">
     <i onclick="w3_open()" class="fa fa-bars w3-xlarge w3-button w3-theme"></i>
     <div class="w3-center">
-        <h4>BEAUTIFUL RESPONSIVE WEB SITES</h4>
-        <h1 class="w3-xxxlarge w3-animate-bottom">BUILT WITH W3.CSS</h1>
+        <h4>Welcome to Cognizant, Mesa Arizona</h4>
+        <h1 class="w3-xxxlarge w3-animate-bottom">BadgeARaMaui</h1>
         <div class="w3-padding-32">
             <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="document.getElementById('id01').style.display='block'" style="font-weight:900;">LEARN W3.CSS</button>
         </div>
