Main landing pages updated.

--- a/src/main/resources/templates/visitor.html
+++ b/src/main/resources/templates/visitor.html
@@ -1,15 +1,30 @@
 <!DOCTYPE html>
 <html>
-<head>
-    <meta charset="UTF-8">
-    <title>Visitor Home</title>
-    <link rel="stylesheet" href="/main.css"/>
-</head>
+<title>BadgeARaMaui Visitor Landing</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-green.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 <body>
 
-<div id="visitor"></div>
+<!-- Header -->
+<header class="w3-container w3-theme w3-padding" id="myHeader">
+    <div class="w3-center">
+        <h4 class="w3-animate-right">Welcome to Cognizant, Mesa Arizona!</h4>
+        <h1 class="w3-xxxlarge w3-animate-left">Visitor Login/Logout</h1>
+    </div>
+</header>
 
-<script src="built/bundle.js"></script>
+<div class="w3-padding-32 w3-center w3-animate-zoom">
+    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='visitor.html'" style="font-weight:900;">Log In</button>
+    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='monitor.html'" style="font-weight:900;">Log Out</button>
+</div>
+
+<!-- Footer -->
+<footer class="w3-container w3-theme-dark w3-padding-16">
+    <p class="w3-center">Select a function to continue.</p>
+</footer>
 
 </body>
 </html>
