HTML pages linked

--- a/src/main/resources/templates/visitor/visitor.html
+++ b/src/main/resources/templates/visitor/visitor.html
@@ -17,8 +17,8 @@
 </header>
 
 <div class="w3-padding-32 w3-center w3-animate-zoom">
-    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='visitor.html'" style="font-weight:900;">Log In</button>
-    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='monitor.html'" style="font-weight:900;">Log Out</button>
+    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/checkin'" style="font-weight:900;">Check In</button>
+    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/checkout'" style="font-weight:900;">Check Out</button>
 </div>
 
 <!-- Footer -->
