--- a/src/main/resources/templates/monitor/visitor_status.html
+++ b/src/main/resources/templates/monitor/visitor_status.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Visitor Status</title>
 </head>
 <body>
-
+Visitor Status
 </body>
 </html>
