--- a/src/main/resources/templates/visitor/visitor_checkout.html
+++ b/src/main/resources/templates/visitor/visitor_checkout.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Visitor Check Out</title>
 </head>
 <body>
-
+Visitor Check Out
 </body>
 </html>
