Visitor Lookup pipeline

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,7 +12,7 @@
 <header class="w3-container w3-theme w3-padding" id="myHeader">
     <div class="w3-center">
         <h4 class="w3-animate-right"><p th:text="'Welcome to Cognizant, ' + ${location} + '!'" /></h4>
-        <h1 class="w3-xxxlarge w3-animate-left">BadgeARaMaui</h1>
+        <h1 class="w3-xxxlarge w3-animate-left">Badge-A-RaMaui</h1>
 
     </div>
 </header>
