--- a/src/main/resources/templates/visitor/visitor_checkin.html
+++ b/src/main/resources/templates/visitor/visitor_checkin.html
@@ -1,10 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
     <title>Visitor Check In</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-green.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
 </head>
 <body>
-Visitor Check In
+<div class="w3-row-padding">
+    <div class="w3-half">
+        <div class="w3-container w3-card-4 w3-theme">
+            <h1>Visitor Check In</h1>
+        </div>
+    </div>
+</div>
+<hr>
+<div class="w3-row-padding">
+
+    <div class="w3-half">
+
+        <form class="w3-container w3-card-4" action="#" th:action="@{/visitor/register}" th:object="${visitor}"
+              method="post">
+
+            <div class="w3-section">
+                <input class="w3-input" type="text" th:field="*{phoneNumber}" required>
+                <label>Phone Number</label>
+            </div>
+
+            <div class="w3-section">
+                <input class="w3-input" type="text" th:field="*{firstName}" required>
+                <label>First Name</label>
+            </div>
+
+            <div class="w3-section">
+                <input class="w3-input" type="text" th:field="*{lastName}" required>
+                <label>Last Name</label>
+            </div>
+
+            <div class="w3-section">
+                <input class="w3-input" type="text" th:field="*{company}" required>
+                <label>Company</label>
+            </div>
+
+            <div class="w3-section">
+                <input class="w3-input" type="text" th:field="*{hostName}" required>
+                <label>Host Name</label>
+            </div>
+
+            <div class="w3-section">
+                <input class="w3-input" type="text" th:field="*{hostPhone}" required>
+                <label>Host Mobile Phone Number</label>
+            </div>
+
+            <div class="w3-section">
+                <input class="w3-input" type="text" th:field="*{purposeOfVisit}" required>
+                <label>Purpose of Visit</label>
+            </div>
+
+            <div class="w3-container w3-theme">
+                <p><input type="submit" value="Submit"/> <input type="reset" value="Reset"/></p>
+            </div>
+
+        </form>
+    </div>
+</div>
 </body>
 </html>
