Visitor Pages working

--- a/src/main/resources/templates/visitor/visitor.html
+++ b/src/main/resources/templates/visitor/visitor.html
@@ -13,17 +13,22 @@
     <div class="w3-center">
         <h4 class="w3-animate-right">Welcome to Cognizant, Mesa Arizona!</h4>
         <h1 class="w3-xxxlarge w3-animate-left">Visitor Login/Logout</h1>
+        <p class="w3-center">Select a function to continue...</p>
     </div>
 </header>
 
 <div class="w3-padding-32 w3-center w3-animate-zoom">
-    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/checkin'" style="font-weight:900;">Check In</button>
-    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/checkout'" style="font-weight:900;">Check Out</button>
+    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/checkin'"
+            style="font-weight:900;">Check In
+    </button>
+    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/checkout'"
+            style="font-weight:900;">Check Out
+    </button>
 </div>
 
 <!-- Footer -->
 <footer class="w3-container w3-theme-dark w3-padding-16">
-    <p class="w3-center">Select a function to continue.</p>
+
 </footer>
 
 </body>
