--- a/src/main/resources/templates/examples.html
+++ b/src/main/resources/templates/examples.html
@@ -25,7 +25,10 @@
         <h4>BEAUTIFUL RESPONSIVE WEB SITES</h4>
         <h1 class="w3-xxxlarge w3-animate-bottom">BUILT WITH W3.CSS</h1>
         <div class="w3-padding-32">
-            <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="document.getElementById('id01').style.display='block'" style="font-weight:900;">LEARN W3.CSS</button>
+            <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey"
+                    onclick="document.getElementById('id01').style.display='block'" style="font-weight:900;">LEARN
+                W3.CSS
+            </button>
         </div>
     </div>
 </header>
@@ -160,13 +163,15 @@
     </header>
 
     <div class="w3-padding w3-white w3-display-container">
-        <span onclick="this.parentElement.style.display='none'" class="w3-button w3-display-topright"><i class="fa fa-remove"></i></span>
+        <span onclick="this.parentElement.style.display='none'" class="w3-button w3-display-topright"><i
+                class="fa fa-remove"></i></span>
         <h2>London</h2>
         <p>London is the capital city of England. It is the most populous city in the United Kingdom,
             with a metropolitan area of over 13 million inhabitants.</p>
         <p>Standing on the River Thames, London has been a major settlement for two millennia,
             its history going back to its founding by the Romans, who named it Londinium.</p>
-        <p>By the way, you can add a close icon to all containers if you want the ability to hide them. Look to your right!</p>
+        <p>By the way, you can add a close icon to all containers if you want the ability to hide them. Look to your
+            right!</p>
     </div>
 
     <footer class="w3-container w3-blue-grey">
@@ -380,7 +385,8 @@
 
     <div class="w3-light-gray">
         <div id="myBar" class="w3-center w3-padding w3-theme" style="width:5%">5%</div>
-    </div><br>
+    </div>
+    <br>
     <button class="w3-btn w3-theme" onclick="move()">Click Me</button>
 </div>
 <hr>
@@ -418,19 +424,27 @@
 
     <hr>
     <h2 class="w3-center">Accordions</h2>
-    <button onclick="myAccFunc('Demo1')" class="w3-padding-16 w3-theme w3-button w3-block w3-left-align">Open Section 1</button>
+    <button onclick="myAccFunc('Demo1')" class="w3-padding-16 w3-theme w3-button w3-block w3-left-align">Open Section
+        1
+    </button>
     <div id="Demo1" class="w3-hide">
         <div class="w3-container">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat.</p>
         </div>
     </div>
-    <button onclick="myAccFunc('Demo2')" class="w3-padding-16 w3-theme w3-button w3-block w3-left-align">Open Section 2</button>
+    <button onclick="myAccFunc('Demo2')" class="w3-padding-16 w3-theme w3-button w3-block w3-left-align">Open Section
+        2
+    </button>
     <div id="Demo2" class="w3-hide">
         <a href="#" class="w3-button w3-block w3-left-align">Link 1</a>
         <a href="#" class="w3-button w3-block w3-left-align">Link 2</a>
         <a href="#" class="w3-button w3-block w3-left-align">Link 3</a>
     </div>
-    <button onclick="myAccFunc('Demo3')" class="w3-padding-16 w3-theme w3-button w3-block w3-left-align">Open Section 3</button>
+    <button onclick="myAccFunc('Demo3')" class="w3-padding-16 w3-theme w3-button w3-block w3-left-align">Open Section
+        3
+    </button>
     <div id="Demo3" class="w3-hide w3-black">
         <div class="w3-container">
             <p>Accordion with Images:</p>
@@ -443,7 +457,8 @@
     <h2 class="w3-center">Tabs</h2>
     <div class="w3-border">
         <div class="w3-bar w3-theme">
-            <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openCity(event,'London')">London</button>
+            <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openCity(event,'London')">London
+            </button>
             <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openCity(event,'Paris')">Paris</button>
             <button class="w3-bar-item w3-button testbtn w3-padding-16" onclick="openCity(event,'Tokyo')">Tokyo</button>
         </div>
@@ -451,13 +466,15 @@
         <div id="London" class="w3-container city w3-animate-opacity">
             <h2>London</h2>
             <p>London is the capital city of England.</p>
-            <p>It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million inhabitants.</p>
+            <p>It is the most populous city in the United Kingdom, with a metropolitan area of over 13 million
+                inhabitants.</p>
         </div>
 
         <div id="Paris" class="w3-container city w3-animate-opacity">
             <h2>Paris</h2>
             <p>Paris is the capital of France.</p>
-            <p>The Paris area is one of the largest population centers in Europe, with more than 12 million inhabitants.</p>
+            <p>The Paris area is one of the largest population centers in Europe, with more than 12 million
+                inhabitants.</p>
         </div>
 
         <div id="Tokyo" class="w3-container city w3-animate-opacity">
@@ -520,86 +537,94 @@
         <a class="w3-text-white" href="#myHeader"><span class="w3-xlarge">
     <i class="fa fa-chevron-circle-up"></i></span></a>
     </div>
-    <p>Remember to check out our  <a href="w3css_references.asp" class="w3-btn w3-theme-light" target="_blank">W3.CSS Reference</a></p>
+    <p>Remember to check out our  <a href="w3css_references.asp" class="w3-btn w3-theme-light" target="_blank">W3.CSS
+        Reference</a></p>
 </footer>
 
 <!-- Script for Sidebar, Tabs, Accordions, Progress bars and slideshows -->
 <script>
-// Side navigation
-function w3_open() {
-    var x = document.getElementById("mySidebar");
-    x.style.width = "100%";
-    x.style.fontSize = "40px";
-    x.style.paddingTop = "10%";
-    x.style.display = "block";
-}
-function w3_close() {
-    document.getElementById("mySidebar").style.display = "none";
-}
-
-// Tabs
-function openCity(evt, cityName) {
-  var i;
-  var x = document.getElementsByClassName("city");
-  for (i = 0; i < x.length; i++) {
-     x[i].style.display = "none";
-  }
-  var activebtn = document.getElementsByClassName("testbtn");
-  for (i = 0; i < x.length; i++) {
-      activebtn[i].className = activebtn[i].className.replace(" w3-dark-grey", "");
-  }
-  document.getElementById(cityName).style.display = "block";
-  evt.currentTarget.className += " w3-dark-grey";
-}
-
-var mybtn = document.getElementsByClassName("testbtn")[0];
-mybtn.click();
-
-// Accordions
-function myAccFunc(id) {
-    var x = document.getElementById(id);
-    if (x.className.indexOf("w3-show") == -1) {
-        x.className += " w3-show";
-    } else {
-        x.className = x.className.replace(" w3-show", "");
+    // Side navigation
+    function w3_open() {
+        var x = document.getElementById("mySidebar");
+        x.style.width = "100%";
+        x.style.fontSize = "40px";
+        x.style.paddingTop = "10%";
+        x.style.display = "block";
     }
-}
 
-// Slideshows
-var slideIndex = 1;
-
-function plusDivs(n) {
-slideIndex = slideIndex + n;
-showDivs(slideIndex);
-}
-
-function showDivs(n) {
-  var x = document.getElementsByClassName("mySlides");
-  if (n > x.length) {slideIndex = 1}
-  if (n < 1) {slideIndex = x.length} ;
-  for (i = 0; i < x.length; i++) {
-     x[i].style.display = "none";
-  }
-  x[slideIndex-1].style.display = "block";
-}
-
-showDivs(1);
-
-// Progress Bars
-function move() {
-  var elem = document.getElementById("myBar");
-  var width = 5;
-  var id = setInterval(frame, 10);
-  function frame() {
-    if (width == 100) {
-      clearInterval(id);
-    } else {
-      width++;
-      elem.style.width = width + '%';
-      elem.innerHTML = width * 1  + '%';
+    function w3_close() {
+        document.getElementById("mySidebar").style.display = "none";
     }
-  }
-}
+
+    // Tabs
+    function openCity(evt, cityName) {
+        var i;
+        var x = document.getElementsByClassName("city");
+        for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+        }
+        var activebtn = document.getElementsByClassName("testbtn");
+        for (i = 0; i < x.length; i++) {
+            activebtn[i].className = activebtn[i].className.replace(" w3-dark-grey", "");
+        }
+        document.getElementById(cityName).style.display = "block";
+        evt.currentTarget.className += " w3-dark-grey";
+    }
+
+    var mybtn = document.getElementsByClassName("testbtn")[0];
+    mybtn.click();
+
+    // Accordions
+    function myAccFunc(id) {
+        var x = document.getElementById(id);
+        if (x.className.indexOf("w3-show") == -1) {
+            x.className += " w3-show";
+        } else {
+            x.className = x.className.replace(" w3-show", "");
+        }
+    }
+
+    // Slideshows
+    var slideIndex = 1;
+
+    function plusDivs(n) {
+        slideIndex = slideIndex + n;
+        showDivs(slideIndex);
+    }
+
+    function showDivs(n) {
+        var x = document.getElementsByClassName("mySlides");
+        if (n > x.length) {
+            slideIndex = 1
+        }
+        if (n < 1) {
+            slideIndex = x.length
+        }
+        ;
+        for (i = 0; i < x.length; i++) {
+            x[i].style.display = "none";
+        }
+        x[slideIndex - 1].style.display = "block";
+    }
+
+    showDivs(1);
+
+    // Progress Bars
+    function move() {
+        var elem = document.getElementById("myBar");
+        var width = 5;
+        var id = setInterval(frame, 10);
+
+        function frame() {
+            if (width == 100) {
+                clearInterval(id);
+            } else {
+                width++;
+                elem.style.width = width + '%';
+                elem.innerHTML = width * 1 + '%';
+            }
+        }
+    }
 </script>
 
 </body>
