--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,34 +1,46 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<title>BadgeARaMaui</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-indigo.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+<head>
+    <title>BadgeARaMaui</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-indigo.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+
+    <!-- custom javascript must be below jquery library -->
+    <script src="jquery-3.3.1.js"></script>
+    <script src="index.js"></script>
+</head>
 <body>
 
 <!-- Header -->
 <header class="w3-container w3-theme w3-padding" id="myHeader">
     <div class="w3-center">
-        <h4 class="w3-animate-right"><p th:text="'Welcome to Cognizant, ' + ${location} + '!'" /></h4>
+        <h4 class="w3-animate-right"><p th:text="'Welcome to Cognizant, ' + ${location} + '!'"/></h4>
         <h1 class="w3-xxxlarge w3-animate-left">Badge-A-RaMaui</h1>
-
+        <p class="w3-center">Select a mode to continue...</p>
     </div>
 </header>
 
 <div class="w3-padding-32 w3-center w3-animate-zoom">
-    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/visitor'" style="font-weight:900;">Enter Visitor Mode</button>
-    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/monitor'" style="font-weight:900;">Enter Monitor Mode</button>
+    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/visitor'"
+            style="font-weight:900;">Enter Visitor Mode
+    </button>
+    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/monitor'"
+            style="font-weight:900;">Enter Monitor Mode
+    </button>
 </div>
-
 
 
 <!-- Footer -->
 <footer class="w3-container w3-theme-dark w3-padding-16">
-    <p class="w3-center">Powered by <a href="https://spring.io" target="_blank">Spring</a> and Minions.</p>
+    <p class="w3-center">Powered by <a href="https://spring.io" target="_blank">Spring</a>, <a
+            href="https://www.thymeleaf.org" target="_blank">ThymeLeaf</a>, <a href="https://jquery.com"
+                                                                               target="_blank">JQuery</a> and a bit of
+        Magic.</p>
     <div class="w3-center">
-       <p th:text="'Time is ' + ${time}" />
+        <p id="time"></p>
     </div>
 
 </footer>
