--- a/src/main/resources/templates/monitor/monitor.html
+++ b/src/main/resources/templates/monitor/monitor.html
@@ -17,8 +17,12 @@
 </header>
 
 <div class="w3-padding-32 w3-center w3-animate-zoom">
-    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/status'" style="font-weight:900;">Monitor Visitors</button>
-    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/admin'" style="font-weight:900;">Visitor Admin</button>
+    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/status'"
+            style="font-weight:900;">Monitor Visitors
+    </button>
+    <button class="w3-btn w3-xlarge w3-dark-grey w3-hover-light-grey" onclick="window.location.href='/admin'"
+            style="font-weight:900;">Visitor Admin
+    </button>
 </div>
 
 <!-- Footer -->
