--- a/src/main/resources/templates/visitor/visitor_checkout.html
+++ b/src/main/resources/templates/visitor/visitor_checkout.html
@@ -1,10 +1,84 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta charset="UTF-8">
-    <title>Visitor Check Out</title>
+    <title>Visitor Check In</title>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-indigo.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+          integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+
+    <!-- custom javascript must be below jquery library -->
+    <script src="jquery-3.3.1.js"></script>
+    <script src="visitor_checkout.js"></script>
 </head>
 <body>
-Visitor Check Out
+
+<div class="w3-row-padding w3-center">
+
+    <div class="w3-third">
+        <div class="w3-container w3-card-4 w3-theme">
+            <h1 class="w3-animate-zoom">Visitor Check Out</h1>
+        </div>
+    </div>
+</div>
+
+<hr>
+<div class="w3-row-padding">
+
+    <div class="w3-third">
+
+        <form class="w3-container w3-card-4" action="#" th:action="@{/visitor/checkout}" th:object="${visitor}"
+              method="post">
+            <p>Enter phone number to check out:</p>
+
+            <div class="w3-section">
+                <input id="phoneNumber" class="w3-input" type="text" th:field="*{phoneNumber}" required>
+                <label>Phone Number</label>
+                <input id="lookup" class="w3-right" type="button" value="Lookup"/>
+            </div>
+
+            <!-- Modal -->
+            <div id="modal1" class="w3-modal">
+                <div class="w3-modal-content w3-card-4 w3-animate-top">
+                    <header class="w3-container w3-theme-l1">
+                        <span onclick="document.getElementById('modal1').style.display='none'"
+                              class="w3-button w3-display-topright">×</span>
+                        <h4>What are you doing, Dave?!</h4>
+                        <h5><i class="far fa-dizzy fa-5x"></i></h5>
+                    </header>
+                    <div class="w3-padding">
+                        <p>You need to enter a phone number...</p>
+                    </div>
+                    <footer class="w3-container w3-theme-l1">
+                    </footer>
+                </div>
+            </div>
+
+            <div class="w3-container">
+                <h3 class="w3-text-indigo">Check-Out for:</h3>
+            </div>
+            <ul class="w3-ul w3-border-top">
+                <li>
+                    <h4>Name</h4>
+                    <p id="visitorName"></p>
+                </li>
+                <li>
+                    <h4>Company</h4>
+                    <p id="company"></p>
+                </li>
+            </ul>
+
+            <div class="w3-container w3-indigo w3-large w3-center">
+                <p><input type="submit" value="Check-Out"/> <input id="reset" type="reset" value="Reset Form"/> <input
+                        type="button" value="Back" onclick="window.location.href='/visitor'"/></p>
+            </div>
+
+        </form>
+    </div>
+</div>
+
+
 </body>
 </html>
