--- a/src/main/resources/templates/visitor/visitor_checkin_success.html
+++ b/src/main/resources/templates/visitor/visitor_checkin_success.html
@@ -1,26 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Successful Checkin!</title>
+    <title>Successful Check-In!</title>
     <meta http-equiv="refresh" content="10;url=/visitor">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-green.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+          integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body>
-<div class="w3-row-padding">
-    <div class="w3-third">
-        <div class="w3-card">
-            <div class="w3-container">
-                <p>You have successfully checked in!</p>
-                <form>
-                    <p><input type="button" value="Visitor Home" onClick="window.location.href='/visitor'"/></p>
-                </form>
-            </div>
+
+<div class="w3-half">
+    <div class="w3-card white">
+        <header class="w3-container w3-theme w3-padding-16">
+            <div class="w3-center"><i class="far fa-thumbs-up fa-5x"></i></div>
+        </header>
+        <div class="w3-container">
+            <h3 class="w3-text-indigo w3-center">Check-Out was successful!</h3>
         </div>
+        <ul class="w3-ul w3-border-top w3-center">
+            <li>
+                <p>Have a nice day!</p>
+                <i class="far fa-smile-beam fa-3x"></i>
+            </li>
+        </ul>
+        <footer class="w3-container w3-theme-dark w3-large w3-padding-16"><input class="w3-right" type="button"
+                                                                                 value="Visitor Home"
+                                                                                 onClick="window.location.href='/visitor'"/>
+        </footer>
     </div>
 </div>
+
 </body>
 </html>
