--- a/src/main/resources/templates/visitor/visitor_checkout.html
+++ b/src/main/resources/templates/visitor/visitor_checkout.html
@@ -45,11 +45,11 @@
                     <header class="w3-container w3-theme-l1">
                         <span onclick="document.getElementById('modal1').style.display='none'"
                               class="w3-button w3-display-topright">×</span>
-                        <h4>What are you doing, Dave?!</h4>
+                        <h4>I'm sorry Dave, I'm afraid I can't do that...</h4>
                         <h5><i class="far fa-dizzy fa-5x"></i></h5>
                     </header>
                     <div class="w3-padding">
-                        <p>You need to enter a phone number...</p>
+                        <p>You need to enter a phone number!</p>
                     </div>
                     <footer class="w3-container w3-theme-l1">
                     </footer>
