--- a/src/main/resources/templates/visitor/visitor_checkout.html
+++ b/src/main/resources/templates/visitor/visitor_checkout.html
@@ -17,9 +17,12 @@
 
 <div class="w3-row-padding w3-center">
 
-    <div class="w3-third">
-        <div class="w3-container w3-card-4 w3-theme">
-            <h1 class="w3-animate-zoom">Visitor Check Out</h1>
+    <div class="w3-third w3-theme w3-card-4">
+        <div class="w3-container w3-card-4 ">
+            <h1 class="w3-animate-zoom">Visitor Check-Out</h1>
+        </div>
+        <div class="w3-center">
+            <p id="time"></p>
         </div>
     </div>
 </div>
@@ -70,7 +73,7 @@
                 </li>
             </ul>
 
-            <div class="w3-container w3-indigo w3-large w3-center">
+            <div class="w3-container w3-theme-dark w3-large w3-center w3-card-4">
                 <p><input type="submit" value="Check-Out"/> <input id="reset" type="reset" value="Reset Form"/> <input
                         type="button" value="Back" onclick="window.location.href='/visitor'"/></p>
             </div>
