Tweaks to home page

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://www.w3schools.com/lib/w3-theme-indigo.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
+          integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
     <!-- custom javascript must be below jquery library -->
     <script src="jquery-3.3.1.js"></script>
@@ -38,7 +39,7 @@
     <p class="w3-center">Powered by <a href="https://spring.io" target="_blank">Spring</a>, <a
             href="https://www.thymeleaf.org" target="_blank">ThymeLeaf</a>, <a href="https://jquery.com"
                                                                                target="_blank">JQuery</a> and a bit of
-        Magic.</p>
+        Magic. <i class="fas fa-cogs"></i><i class="fas fa-cog fa-spin"></i></p>
     <div class="w3-center">
         <p id="time"></p>
     </div>
