Updates to rest clients

--- a/src/main/resources/templates/visitor/visitor_checkin_success.html
+++ b/src/main/resources/templates/visitor/visitor_checkin_success.html
@@ -18,7 +18,7 @@
             <div class="w3-center"><i class="far fa-thumbs-up fa-5x"></i></div>
         </header>
         <div class="w3-container">
-            <h3 class="w3-text-indigo w3-center">Check-Out was successful!</h3>
+            <h3 class="w3-text-indigo w3-center">Check-In was successful!</h3>
         </div>
         <ul class="w3-ul w3-border-top w3-center">
             <li>
