--- a/src/main/resources/templates/visitor/visitor_checkin.html
+++ b/src/main/resources/templates/visitor/visitor_checkin.html
@@ -85,17 +85,17 @@
             </div>
 
             <div class="w3-section">
-                <input id="hostName" class="w3-input" type="text" th:field="*{hostName}" required>
+                <input id="hostName" class="w3-input" type="text" th:field="*{hostName}">
                 <label>Host Name</label>
             </div>
 
             <div class="w3-section">
-                <input id="hostMobilePhone" class="w3-input" type="text" th:field="*{hostPhone}" required>
+                <input id="hostMobilePhone" class="w3-input" type="text" th:field="*{hostPhone}">
                 <label>Host Mobile Phone Number</label>
             </div>
 
             <div class="w3-section">
-                <input id="purpose" class="w3-input" type="text" th:field="*{purposeOfVisit}" required>
+                <input id="purpose" class="w3-input" type="text" th:field="*{purposeOfVisit}">
                 <label>Purpose of Visit</label>
             </div>
 
