--- a/src/main/resources/templates/monitor/visitor_admin.html
+++ b/src/main/resources/templates/monitor/visitor_admin.html
@@ -145,7 +145,7 @@
             <div class="w3-container w3-theme w3-center w3-card-4">
                 <div><input id="update" type="submit" value="Update"/>
                      <input id="delete" type="button" value="Delete"/>
-                     <input id="reprint" type="button" value="Reprint Badge" onclick="window.location.href='/printbadge'"/>
+                     <input id="reprint" type="submit" value="Reprint Badge" onclick="window.location.href='/printbadge'"/>
                      <input type="button" value="Back" onclick="window.location.href='/monitor'"/>
                 </div>
             </div>
